iso-rust2/wasm-pack.log
Sep 22 23:39:42.456 ERRO Compilation of your program failed. stderr:

   Compiling proc-macro2 v0.4.19
   Compiling unicode-xid v0.1.0
   Compiling version_check v0.1.4
   Compiling ryu v0.2.6
   Compiling serde v1.0.79
   Compiling wasm-bindgen-shared v0.2.22
   Compiling cfg-if v0.1.5
   Compiling itoa v0.4.3
   Compiling wasm-bindgen v0.2.22
   Compiling log v0.4.5
   Compiling lazy_static v1.1.0
   Compiling quote v0.6.8
   Compiling syn v0.15.4
   Compiling serde_json v1.0.28
   Compiling serde_derive v1.0.79
   Compiling wasm-bindgen-backend v0.2.22
   Compiling wasm-bindgen-macro-support v0.2.22
   Compiling wasm-bindgen-macro v0.2.22
   Compiling iso-rust2 v0.1.0 (/home/legokichi/Github/rust-snipets/iso-rust2)
error[E0425]: cannot find function `alert` in this scope
 --> src/lib.rs:7:5
  |
7 |     alert(&format!("Hello, {}!", name));
  |     ^^^^^ not found in this scope

error[E0425]: cannot find value `name` in this scope
 --> src/lib.rs:7:34
  |
7 |     alert(&format!("Hello, {}!", name));
  |                                  ^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
error: Could not compile `iso-rust2`.

To learn more, run the command again with --verbose.

Sep 22 23:41:30.531 ERRO Compilation of your program failed. stderr:

    Updating crates.io index
error: no matching package named `js_sys` found
location searched: registry `https://github.com/rust-lang/crates.io-index`
did you mean: js-sys
required by package `iso-rust2 v0.1.0 (/home/legokichi/Github/rust-snipets/iso-rust2)`

Sep 22 23:41:44.833 ERRO Compilation of your program failed. stderr:

    Updating crates.io index
 Downloading js-sys v0.2.7
   Compiling js-sys v0.2.7
   Compiling iso-rust2 v0.1.0 (/home/legokichi/Github/rust-snipets/iso-rust2)
error[E0425]: cannot find function `alert` in this scope
 --> src/lib.rs:8:5
  |
8 |     alert(&format!("Hello, {}!", name));
  |     ^^^^^ not found in this scope

error[E0425]: cannot find value `name` in this scope
 --> src/lib.rs:8:34
  |
8 |     alert(&format!("Hello, {}!", name));
  |                                  ^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
error: Could not compile `iso-rust2`.

To learn more, run the command again with --verbose.

